@@ -1,3 +1,15 @@
+2011-05-10  NIIBE Yutaka  <gniibe@fsij.org>
+
+	Prevent observation of PW3 is emptiness by PW3's error counter.
+	Support verify_admin by PW1 when PW3 is empty.
+	* src/ac.c (admin_authorized): New.
+	(verify_admin_0): Set admin_authorized.
+	* src/openpgp-do.c (proc_resetting_code): Use admin_authorized.
+	(gpg_do_write_prvkey): Clear dek_encrypted_3 when keystring_admin
+	is NULL.
+	(proc_key_import): Checking admin_authorized, set keystring_admin.
+	* src/openpgp.c (cmd_reset_user_password): Use admin_authorized.
+
 2011-04-18  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* gnuk.svg: Updated.
